--- a/styles.css
+++ b/styles.css
@@ -380,7 +380,12 @@ tr.fr td { border:0; }
 th { padding: 4px 0px 4px 2px;  }
 td { padding: 4px 0px 4px 2px; border-top: 1px solid #ccc;}
 
-
+#row_age {
+  display: none;
+}
+#row_gender {
+  display: none;
+}
 #row_remidilution {
   display: none;
   height: 1rem;
@@ -393,7 +398,7 @@ td { padding: 4px 0px 4px 2px; border-top: 1px solid #ccc;}
 
 #row_fendilution {
   display: none;
-  height: 1rem;
+  /*height: 1rem;*/
 }
 
 #row_fen_weightadjusted {
