--- a/styles.css
+++ b/styles.css
@@ -1004,7 +1004,7 @@ input[type=number]:not(:placeholder-shown):focus:valid {
   display: block;
   position: relative;
   padding: 1px 0 0 2px;
-  margin: 0px 0 12px 30px;
+  margin: 0px 0 0.75rem 30px;
   border-bottom: 2px dotted transparent;
   cursor: pointer;
   /*font-size: 22px;*/
@@ -1283,7 +1283,7 @@ body.dark #custom_fendilution, body.dark #custom_remidilution, body.dark #custom
 }
 
 #modalInitial, #modalLoad {
-  padding-top: 5vh;
+  padding-top: 5vw; /*this is deliberate to make the top, left, right paddings the same*/
   background-color:  rgba(0,0,0,0.7);
 }
 
@@ -1478,7 +1478,7 @@ body.dark #custom_fendilution, body.dark #custom_remidilution, body.dark #custom
   box-shadow: 0px 6px 8px -5px rgba(0,0,0,0.15); */
 }
 .table-Init tr {
-  height:3rem;
+  height:2.7rem;
 }
 .table-Init.paedimode tr {
   height:2.8rem;
@@ -1955,7 +1955,7 @@ background-size: 200% 100%;
   cursor:pointer;
 }
 #checkmarkDisplay {
-  margin: 1rem 0 1rem 0;
+  margin: 0.75rem 0 0.75rem 0;
 }
 .schemecpt {
   font-weight:bold;
@@ -5734,7 +5734,7 @@ body.dark #preview-expand-box > div > div.timespan {
     font-size: 109%;
   }
   .table-Init tr {
-    height: 2.8rem;
+    height: 2.6rem;
   }
   .table-Init.paedimode tr {
     height: 2.6rem; 
