--- a/styles.css
+++ b/styles.css
@@ -6677,6 +6677,60 @@ body.dark a.button.newbuttongrey:hover {
   align-self: center;
 }
 
+/*manual styles here */
+.m-main {
+  width: 100%;
+  border-radius: 9px;
+  background: #fff;
+  padding: 0.5rem;
+}
+
+.m-h1 {
+  font-family: "Brandon Text", sans-serif;
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  color: #198964;
+  border-bottom: 1px solid #ddd;
+}
+
+.m-h2 {
+  font-family: "Brandon Text", sans-serif;
+  text-transform: uppercase;
+  font-size: 1rem;
+  color: #198964;
+  background: rgba(27,137,100,0.1);
+}
+
+.m-h3 {
+  font-weight: bold;
+  color: #555;
+  border-bottom: 1px solid #ddd;
+  font-style: italic;
+  margin-bottom: 0;
+}
+
+.m-h3 + p {
+  margin-top: 0.5rem;
+}
+
+.m-image-container {
+  text-align: center;
+  background: rgba(0,0,0,0.5);
+}
+
+.m-image-container > img {
+  max-width: 60vw;
+  max-height: 60vh;
+}
+
+@media screen and (min-width: 465px) {
+  .m-main {
+    width: 80%;
+    max-width: 1024px;
+    margin: 1rem auto;
+  }
+}
+
 
 
 /* end new input styles */
