--- a/styles.css
+++ b/styles.css
@@ -6678,6 +6678,24 @@ body.dark a.button.newbuttongrey:hover {
 }
 
 /*manual styles here */
+.m-header {
+  position: fixed;
+  top: 0;
+  display: flex;
+  width: 100%;
+  height: 25px;
+  background: white;
+  color: blue;
+}
+.m-subheader {
+  position: fixed;
+  display: flex;
+  height: 25px;
+  top: 25px;
+  width: 100%;
+  background: black;
+  color: white;
+}
 .m-main {
   width: 100%;
   border-radius: 9px;
