--- a/styles.css
+++ b/styles.css
@@ -6749,12 +6749,28 @@ ol ::marker {
   border-radius: 0 9px 0 0;
   background: #7B8092;
 }
+#subheaderdropdown {
+  transition: 0.3s transform ease;
+  display: inline-block;
+  cursor: pointer;
+}
+
+#subheaderdropdown.active {
+  transform: rotate(180deg);
+}
 .m-onthispageexpand {
   position: fixed;
-  top: 75px;
+  top: 80px;
   width: 100%;
   left: 0;
   background: #aab0c3;
+}
+.m-onthispageexpand ul {
+  list-style-type: none;
+}
+.m-onthispageexpand a {
+  color: inherit;
+  text-decoration: inherit;
 }
 .m-body {
   background: #fff;
@@ -6822,6 +6838,7 @@ ol ::marker {
   justify-content: center;
   background: rgba(0,0,0,0.5);
 }
+
 
 @media screen and (min-width: 465px) {
   .m-main {
