--- a/styles.css
+++ b/styles.css
@@ -6704,9 +6704,13 @@ body.dark a.button.newbuttongrey:hover {
       transform: none;
   transition: transform 0.3s ease-out;
 }
-
+#menu2 .menucontent {
+  left: 0;
+  width: 100%;
+}
 #menu2 .menucontent a {
  padding: 3px 0;
+ font-size: 1.2rem;
 }
 ol ::marker {
   color: red;
@@ -6902,6 +6906,13 @@ ol ::marker {
     width: 80%;
     max-width: 1024px;
     margin: 1rem auto;
+  }
+  #menu2 .menucontent {
+    left: 15%;
+    width: 85%;
+  }
+  #menu2 .menucontent a {
+    font-size: 1.5rem;
   }
 }
 
