--- a/styles.css
+++ b/styles.css
@@ -6925,6 +6925,10 @@ ol ::marker {
   .m-image-container > img {
     max-width: 450px;
   }
+  .m-image-container > img.expand {
+    max-width: 100%;
+    max-height: 100%;
+  }
   body {
     display: flex;
   }
