--- a/styles.css
+++ b/styles.css
@@ -7101,6 +7101,9 @@ ol ::marker {
     border-radius: 0 0 1rem 0;
     background: #111;
   }
+  .languagePanel {
+    columns: 2;
+  }
 }
 
 @media screen and (min-width: 900px) {
