--- a/styles.css
+++ b/styles.css
@@ -2276,9 +2276,31 @@ body.dark .loadduration {
   transform:0; 
 }
 #VSdropArea {
-  height: 300px;
+  height: 250px;
   width: 100%;
   background: #ddd;
+  border-radius: 9px;
+  border: 5px solid transparent;
+  transition: 0.3s ease all;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.VSicon {
+  opacity: 0.5;
+}
+#VSdropArea.VShighlight {
+  background: #eee;
+  border-color: #ccc;
+}
+#VSdropArea.VShighlight .VSicon {
+  color: #198964;
+  opacity: 1;
+}
+#VSimportmessage {
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 #VSchartcontainer {
   height: 220px;
