--- a/styles.css
+++ b/styles.css
@@ -2275,6 +2275,18 @@ body.dark .loadduration {
   width:100%; 
   transform:0; 
 }
+#emulatechartcontainer {
+  height: 350px;
+  width: 100%;
+  display: block;
+}
+#emulatetitlecontainer {
+  display: flex;
+  padding: 10px;
+  border-bottom: 1px solid #9bc99d;
+  border-top: 1px solid #9bc99d;
+  background: linear-gradient(78deg, rgba(240,255,240,0.1) 68%, rgba(213,237,214,0.9) 68%);
+}
 #chartwrapper {
   position:absolute;
   width:100%;
