--- a/styles.css
+++ b/styles.css
@@ -5127,6 +5127,9 @@ body.dark .infusionratedropdownitem:hover {
   }
   .footer {
     text-align: left;
+    /*margin-left: 100px;*/
+  }
+  .narrowbodywrapper .footer {
     margin-left: 100px;
   }
   .footer ul {
