--- a/styles.css
+++ b/styles.css
@@ -4370,6 +4370,10 @@ body.dark #ptolcard_switch {
   list-style-type: none;
 }
 
+.menucontent li:hover {
+  cursor: pointer;
+}
+
 .menucontent a {
   font-family: "Brandon Text", sans-serif;
   padding:7px 0px;
